# adaptive-model-routing-serving-optimizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_imports.py
configs/: default.yaml
notebooks/: exploration.ipynb
results/: benchmark_report.md  benchmark_results.json  final_metrics.json  results.json  training_history.json
scripts/: evaluate.py  train.py
src/adaptive_model_routing_serving_optimizer/: __init__.py
src/adaptive_model_routing_serving_optimizer/data/: __init__.py  loader.py  preprocessing.py
src/adaptive_model_routing_serving_optimizer/evaluation/: __init__.py  metrics.py
src/adaptive_model_routing_serving_optimizer/models/: __init__.py  model.py
src/adaptive_model_routing_serving_optimizer/training/: __init__.py  trainer.py
src/adaptive_model_routing_serving_optimizer/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
